--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="anishapo личное смузи детокс яштокролик ноэтонеточно едаменяющая жизнь healingfood">
-    <meta name="keywords" content="anishapo личное смузи детокс яштокролик ноэтонеточно едаменяющая жизнь healingfood" />
+    <meta name="description" content="anishapo личное яштокролик ноэтонеточно healingfood смузи детокс">
+    <meta name="keywords" content="anishapo личное яштокролик ноэтонеточно healingfood смузи детокс" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="anishapo личное смузи детокс яштокролик ноэтонеточно едаменяющая жизнь healingfood" />
+    <meta property="og:description" content="anishapo личное яштокролик ноэтонеточно healingfood смузи детокс" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -92,14 +92,6 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo смузи детокс">
-									<a href="./tags/./anishapo-smuzi-detoks.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-smuzi-detoks.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo смузи детокс</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
 								<div class="stories__slide" title="яштокролик">
 									<a href="./tags/./yashtokrolik.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/yashtokrolik.png);"></div>
@@ -116,18 +108,18 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="едаменяющая жизнь">
-									<a href="./tags/./edamenyayushchaya-zhizn-.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/edamenyayushchaya-zhizn-.png);"></div>
-										<div class="stories__slide-txt" style="">едаменяющая жизнь</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
 								<div class="stories__slide" title="anishapo healingfood">
 									<a href="./tags/./anishapo-healingfood.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-healingfood.png);"></div>
 										<div class="stories__slide-txt" style="">anishapo healingfood</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="anishapo смузи детокс">
+									<a href="./tags/./anishapo-smuzi-detoks.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-smuzi-detoks.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo смузи детокс</div>
 									</a>
 								</div>
 							</div>
@@ -164,30 +156,20 @@
 						<div class="container">
 							<h2 class="links-page-title">ПОПУЛЯРНЫЕ</h2>
 							<div class="article-more__list">
-								<a href="./posts/./moya-istoriyaxxxxx-5.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1608</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82958299_179337959950513_1325142528092314413_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=mBqpjb0YiL8AX_k3c1B&oh=e7a5fe4636a5b3dd6c66101f8370b29a&oe=5ED0422C" alt="МОЯ ИСТОРИЯ ❤️🌱">
-									</div>
-									<div class="article-more__item-name" style="
-">МОЯ ИСТОРИЯ ❤️🌱</div>
-								</a>
 								<a href="./posts/./moya-istoriya-xxxx-4.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1403</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1430</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82155166_602925233615455_5357142775244098314_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=4FuXH9HcCMAAX-fmhmv&oh=037a7aa11ccf87c9b5154bd7de9ef521&oe=5ED47EF9" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
-								<a href="./posts/./moya-istoriyaxxxxx-2.html" class="article-more__item">
+								<a href="./posts/./moya-istoriyaxxxxx-4.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1337</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1405</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82049816_850909225352594_1789752383054729929_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=y14076bKw0gAX-Xa4Nt&oh=abdaffe966822c54cda50d948c0c13ea&oe=5ED39CD3" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
@@ -197,52 +179,62 @@
 								<a href="./posts/./moya-istoriya-xxxx-3.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1300</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1333</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83117044_517051265614152_7828751543441544839_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=fvnsQ78iyCUAX-nyipA&oh=ee5b39422cee8fb1b00decaf29caaada&oe=5ECFC8BA" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
-								<a href="./posts/./moya-istoriyaxxxxx-4.html" class="article-more__item">
+								<a href="./posts/./moya-istoriyaxxxxx-6.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1245</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1281</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82772338_185771505834668_6111832485215198874_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=YZrRYbQa1KYAX9l3bj5&oh=6022042a436523ce4a7c8170b48d4b03&oe=5EC6D8AF" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
-								<a href="./posts/./moya-istoriyaxxxx.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1234</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82222585_471751380157287_2907672014600850675_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=kX7ZCHwinAYAX8Ydm9p&oh=e4f0d02e551e5d75f86c1bea8454a0f7&oe=5ECA5540" alt="МОЯ ИСТОРИЯ❤️🌱">
-									</div>
-									<div class="article-more__item-name" style="
-">МОЯ ИСТОРИЯ❤️🌱</div>
-								</a>
 								<a href="./posts/./moya-istoriya-xxxx-1.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1227</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1266</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81986841_115689239826478_4970631180464119761_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=ldmtKUVQZXUAX9MmgNu&oh=affdfe5051490c701ca8cdd601df8dcf&oe=5ED9D8B3" alt="МОЯ ИСТОРИЯ ❤️🌱">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81986841_115689239826478_4970631180464119761_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=vvBce4rlBIgAX87Dknq&oh=dbb1d7c7f81e25ebe28363a8347601ee&oe=5ED9D8B3" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
+								<a href="./posts/./moya-istoriyaxxxxx-3.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1244</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81843854_1102883926772370_3020991578515235454_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=cLbmpa6LFngAX83Ueqr&oh=601d01a7fadc4e922b7bde022d157457&oe=5ECC12D2" alt="МОЯ ИСТОРИЯ ❤️🌱">
+									</div>
+									<div class="article-more__item-name" style="
+">МОЯ ИСТОРИЯ ❤️🌱</div>
+								</a>
 								<a href="./posts/./moya-istoriya-xxxx-2.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1174</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1210</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83443243_587623825122556_3780724092969003713_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=iLCyxXk8H-QAX-XwbvC&oh=dead50fcdaae4efb6d8ce9e27f64dacd&oe=5ECEDF2B" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
+								</a>
+								<a href="./posts/./moya-istoriyaxxxxx-2.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1159</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83883802_578192936095585_7230772308895580877_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=VEp61w323U8AX9gnMQ-&oh=96dc931d67ddd1acef3fdebdb585301b&oe=5ED90323" alt="МОЯ ИСТОРИЯ ❤️🌱">
+									</div>
+									<div class="article-more__item-name" style="
+">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
 							</div>
 						</div>
