--- a/error.html
+++ b/error.html
@@ -86,43 +86,25 @@
 							<a href="./posts/./moya-istoriyaxxxxx-5.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1424</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1438</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82049816_850909225352594_1789752383054729929_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=y14076bKw0gAX-Xa4Nt&oh=abdaffe966822c54cda50d948c0c13ea&oe=5ED39CD3" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82049816_850909225352594_1789752383054729929_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=8ep2y_xDNgUAX-nUDJx&oh=30fd05cb9b8748678fda71a207ccc8f4&oe=5ED39CD3" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
 							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
-						</a>
-							<a href="./posts/./moya-istoriya-xxxx-3.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1344</span>
-								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83117044_517051265614152_7828751543441544839_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=fvnsQ78iyCUAX-nyipA&oh=ee5b39422cee8fb1b00decaf29caaada&oe=5ECFC8BA" alt="МОЯ ИСТОРИЯ ❤️🌱">
-							</div>
-							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
 						</a>
 							<a href="./posts/./moya-istoriyaxxxxx-7.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1297</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1310</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82772338_185771505834668_6111832485215198874_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=YZrRYbQa1KYAX9l3bj5&oh=6022042a436523ce4a7c8170b48d4b03&oe=5EC6D8AF" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82772338_185771505834668_6111832485215198874_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=I8ftqdOvwbAAX-kmR4i&oh=3233a9351ae1125f8e1eb8e96eb356ad&oe=5EC6D8AF" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
 							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
-						</a>
-							<a href="./posts/./moya-istoriya-xxxx-1.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1281</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81986841_115689239826478_4970631180464119761_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=vvBce4rlBIgAX87Dknq&oh=dbb1d7c7f81e25ebe28363a8347601ee&oe=5ED9D8B3" alt="МОЯ ИСТОРИЯ ❤️🌱">
-							</div>
-							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
 						</a>
 							<a href="./posts/./moya-istoriyaxxxxx-4.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1278</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1297</span>
 								</div>
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81843854_1102883926772370_3020991578515235454_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=5qkrlMS3SbgAX8nP1yg&oh=9bd64ca3b59f76480e96b6858f45fa67&oe=5ECC12D2" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
@@ -131,27 +113,45 @@
 							<a href="./posts/./moya-istoriya-xxxx-2.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1222</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1295</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83443243_587623825122556_3780724092969003713_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=iLCyxXk8H-QAX-XwbvC&oh=dead50fcdaae4efb6d8ce9e27f64dacd&oe=5ECEDF2B" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81986841_115689239826478_4970631180464119761_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=vvBce4rlBIgAX87Dknq&oh=dbb1d7c7f81e25ebe28363a8347601ee&oe=5ED9D8B3" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
 							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
+						</a>
+							<a href="./posts/./moya-istoriyaxxxxx-1.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1257</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82387033_192369958634428_844623154663314913_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=zC8E91ggBs0AX8Tks5O&oh=93d113a37af36648b6ec0f05bf478e65&oe=5EC595B2" alt="МОЯ ИСТОРИЯ ❤️🌱">
+							</div>
+							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
 						</a>
 							<a href="./posts/./moya-istoriyaxxxxx-3.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1216</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1241</span>
 								</div>
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83883802_578192936095585_7230772308895580877_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=VEp61w323U8AX9gnMQ-&oh=96dc931d67ddd1acef3fdebdb585301b&oe=5ED90323" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
 							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
 						</a>
-							<a href="./posts/./moya-istoriyaxxxxx-1.html" class="article-more__item">
+							<a href="./posts/./moya-istoriyaxxxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1198</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1164</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82387033_192369958634428_844623154663314913_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=zC8E91ggBs0AX8Tks5O&oh=93d113a37af36648b6ec0f05bf478e65&oe=5EC595B2" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479771_492275551473563_593260692510337045_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=75luDX5KvfwAX82y0QG&oh=dd71ae06fa7cfca2815b67c42dab8558&oe=5ECF2ABD" alt="МОЯ ИСТОРИЯ ❤️🌱">
+							</div>
+							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
+						</a>
+							<a href="./posts/./moya-istoriyaxxxxx-2.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1148</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83635925_126519612200644_455381365454284509_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=qj9SA-IjofoAX839qAK&oh=2bff26959d8167f71ca9cd3bdeb32fdf&oe=5ECA244D" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
 							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
 						</a>
